<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.cartView.CartFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/tv_cart_title"
        android:layout_margin="8dp"
        android:text="@string/cart_header_label"
        android:textSize="30sp"
        android:textStyle="bold">
    </TextView>

    <Button
        android:id="@+id/btn_checkout"
        android:text="@string/cart_checkout_button"
        android:layout_margin="8dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cart_total_container"
        android:layout_above="@id/btn_checkout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart_total_label"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_margin="8dp"
           >
        </TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_cart_total"
            android:text="@string/cart_total_holder"
            android:textSize="20sp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:textStyle="bold">
        </TextView>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCart"
        android:layout_marginBottom="8dp"
        android:layout_above="@id/cart_total_container"
        android:layout_below="@id/tv_cart_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </androidx.recyclerview.widget.RecyclerView>

</RelativeLayout>